--- a/classic/src/view/main/Main.scss
+++ b/classic/src/view/main/Main.scss
@@ -34,7 +34,7 @@
     $ui-tab-font-weight-active: bold,
     $ui-tab-icon-width: 24px,
     $ui-tab-icon-height: 24px,
-    $ui-tab-icon-spacing: 5px,
+    $ui-tab-icon-spacing: 7px,
     $ui-bar-background-color: #404040,
     $ui-bar-background-gradient: 'none',
     $ui-bar-padding: 0,
@@ -54,10 +54,10 @@
     $ui-header-font-weight: bold,
     $ui-header-icon-height: 24px,
     $ui-header-icon-width: 24px,
-    $ui-header-icon-spacing: 15px,
+    $ui-header-icon-spacing: 15px,//
     $ui-header-background-color: $base-color,
     $ui-header-padding: 0,
-    $ui-header-text-margin: 36px,
+    $ui-header-text-margin: 24px,//
     $ui-header-noborder-adjust: false
 );
 
